force-app/main/default/objects/Contact/fields/Account_s_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_s_Owner_Name__c</fullName>
    <label>Account&apos;s Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>