force-app/main/default/objects/Contact/fields/Btime__c.field-meta.xml
<CustomField>
    <fullName>Btime__c</fullName>
    <label>Btime</label>
    <type>DateTime</type>
</CustomField>