force-app/main/default/objects/Contact/fields/Child_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_Count__c</fullName>
    <label>Child Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>