force-app/main/default/objects/Contact/fields/Has_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Has_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Duplicates</label>
    <type>Checkbox</type>
</CustomField>