force-app/main/default/objects/Contact/fields/NBTime__c.field-meta.xml
<CustomField>
    <fullName>NBTime__c</fullName>
    <label>NBTime</label>
    <type>DateTime</type>
</CustomField>