force-app/main/default/objects/Contact/fields/Sub_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Sub_Picklist__c</fullName>
    <label>Sub Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Master_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>Q</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>