force-app/main/default/objects/Contact/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>Birthdate</formula>
    <label>Test</label>
    <type>Date</type>
</CustomField>