force-app/main/default/objects/Contact/listViews/All_with_date.listView-meta.xml
<ListView>
    <fullName>All_with_date</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Test__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All with date</label>
</ListView>